[gd_scene load_steps=10 format=3 uid="uid://d3wudkgbihe15"]

[ext_resource type="Script" uid="uid://cbpwo83efvetg" path="res://Scripts/Events/start_event.gd" id="1_sol11"]
[ext_resource type="Texture2D" uid="uid://nnexmg3hqcbp" path="res://Asset/Encounter/car_ruin_in_fog.png" id="2_8ympv"]
[ext_resource type="FontFile" uid="uid://qa4nvvmd0bqq" path="res://Asset/Fonts/Oswald-Medium.ttf" id="3_sl1w5"]
[ext_resource type="Texture2D" uid="uid://dca0rddgynlk3" path="res://Asset/People/boy.png" id="4_8ympv"]
[ext_resource type="PackedScene" uid="uid://c6rm8cn24d4ir" path="res://Scenes/NPC'S/EventNPC/npc_1.tscn" id="5_id76b"]
[ext_resource type="Texture2D" uid="uid://de6m1dy7dgr7h" path="res://Asset/People/injured_man.png" id="5_l7rxl"]
[ext_resource type="Texture2D" uid="uid://cxlvl3sd1cwos" path="res://Asset/People/pensive_woman.png" id="6_id76b"]
[ext_resource type="PackedScene" uid="uid://bmvsmjcscyuac" path="res://Scenes/NPC'S/EventNPC/npc_2.tscn" id="7_vg8e2"]
[ext_resource type="PackedScene" uid="uid://7c3tsfob1x1k" path="res://Scenes/NPC'S/EventNPC/npc_3.tscn" id="9_unli4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_sol11")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.968627, 0.901961, 0.72549, 1)

[node name="1stSection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 466.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Buttons" type="Control" parent="1stSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 111.0
offset_right = -23.0
offset_bottom = -146.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="1stSection/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="ReadyToGo" type="Button" parent="1stSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Ready To Go"

[node name="Rest" type="Button" parent="1stSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Rest Here"

[node name="GoIntoTown" type="Button" parent="1stSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Go Into Town"

[node name="NPC" type="Button" parent="1stSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "See Who's  Around"

[node name="ColorRect2" type="ColorRect" parent="1stSection"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -466.0
offset_top = 11.0
offset_right = -5.0
offset_bottom = -97.0
grow_vertical = 2
color = Color(0.950171, 0.853498, 0.596036, 1)

[node name="City" type="Sprite2D" parent="1stSection/ColorRect2"]
position = Vector2(228.5, 270.5)
scale = Vector2(0.217285, 0.384559)
texture = ExtResource("2_8ympv")

[node name="ItemPriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 587.0
offset_top = 488.0
offset_right = 856.0
offset_bottom = 518.0
scale = Vector2(0.96, 1.08)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 20
text = "
"

[node name="NPCSection" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Npc1" type="Control" parent="NPCSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NPCImage" type="ColorRect" parent="NPCSection/Npc1"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 12.0
offset_right = 406.0
offset_bottom = -24.0
grow_vertical = 2
color = Color(0.919055, 0.798216, 0.470192, 1)

[node name="Sprite2D" type="Sprite2D" parent="NPCSection/Npc1/NPCImage"]
position = Vector2(10, 12)
scale = Vector2(0.18457, 0.513986)
texture = ExtResource("4_8ympv")
centered = false

[node name="NPC_no" type="Label" parent="NPCSection/Npc1"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -558.0
offset_top = 533.0
offset_right = -291.0
offset_bottom = 608.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 50
text = "NPC 1"

[node name="EventNPC1" parent="NPCSection/Npc1" instance=ExtResource("5_id76b")]
visible = false
layout_mode = 1
offset_left = 217.0
offset_top = -63.0
offset_right = 217.0
offset_bottom = -63.0
scale = Vector2(1.08, 1.19787)

[node name="Npc2" type="Control" parent="NPCSection"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NPCImage" type="ColorRect" parent="NPCSection/Npc2"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 12.0
offset_right = 406.0
offset_bottom = -24.0
grow_vertical = 2
color = Color(0.919055, 0.798216, 0.470192, 1)

[node name="Sprite2D" type="Sprite2D" parent="NPCSection/Npc2/NPCImage"]
position = Vector2(10, 12)
scale = Vector2(0.18457, 0.513986)
texture = ExtResource("5_l7rxl")
centered = false

[node name="NPC_no" type="Label" parent="NPCSection/Npc2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -558.0
offset_top = 533.0
offset_right = -291.0
offset_bottom = 608.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 50
text = "NPC 2"

[node name="NPC2" parent="NPCSection/Npc2" instance=ExtResource("7_vg8e2")]
visible = false
layout_mode = 1
offset_left = 242.0
offset_top = 6.0
offset_right = -7.0
offset_bottom = 9.0

[node name="Npc3" type="Control" parent="NPCSection"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NPCImage" type="ColorRect" parent="NPCSection/Npc3"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 7.0
offset_top = 12.0
offset_right = 406.0
offset_bottom = -24.0
grow_vertical = 2
color = Color(0.919055, 0.798216, 0.470192, 1)

[node name="Sprite2D" type="Sprite2D" parent="NPCSection/Npc3/NPCImage"]
position = Vector2(10, 12)
scale = Vector2(0.18457, 0.513986)
texture = ExtResource("6_id76b")
centered = false

[node name="NPC_no" type="Label" parent="NPCSection/Npc3"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -558.0
offset_top = 533.0
offset_right = -291.0
offset_bottom = 608.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 50
text = "NPC 3"

[node name="npc3" parent="NPCSection/Npc3" instance=ExtResource("9_unli4")]
visible = false
layout_mode = 1
offset_left = 267.0
offset_right = 267.0

[node name="Buttons" type="Control" parent="NPCSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 460.0
offset_top = 193.0
offset_right = -29.0
offset_bottom = -185.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NPCSection/Buttons"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.5
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Talk" type="Button" parent="NPCSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Talk to this person"

[node name="OtherNpc" type="Button" parent="NPCSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Look for someone else"

[node name="Done" type="Button" parent="NPCSection/Buttons/VBoxContainer"]
modulate = Color(0.820235, 0.690188, 0.324389, 1)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 40
text = "Done Looking Around"

[node name="CityLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 99.5
offset_right = 366.5
offset_bottom = 75.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_sl1w5")
theme_override_font_sizes/font_size = 50
text = "Independence"

[connection signal="pressed" from="1stSection/Buttons/VBoxContainer/ReadyToGo" to="." method="_on_ready_to_go_pressed"]
[connection signal="pressed" from="1stSection/Buttons/VBoxContainer/Rest" to="." method="_on_rest_pressed"]
[connection signal="pressed" from="1stSection/Buttons/VBoxContainer/GoIntoTown" to="." method="_on_go_into_town_pressed"]
[connection signal="pressed" from="1stSection/Buttons/VBoxContainer/NPC" to="." method="_on_npc_pressed"]
[connection signal="pressed" from="NPCSection/Buttons/VBoxContainer/Talk" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="NPCSection/Buttons/VBoxContainer/OtherNpc" to="." method="_on_other_npc_pressed"]
[connection signal="pressed" from="NPCSection/Buttons/VBoxContainer/Done" to="." method="_on_done_pressed"]
